name:                horrent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BencodeParser, Connector, Handshake, Message, Peer, PeersControler, Types, UrlEncoder
  build-depends:       base >= 4.7 && < 5
                     , bytestring ==0.10.*
                     , binary ==0.7.*
                     , HTTP ==4000.2.*
                     , network ==2.6.*
                     , async ==2.0.*
                     , base16-bytestring ==0.1.*
                     , attoparsec ==0.12.*
                     , cryptohash ==0.11.*
                     , stm ==2.4.*
                     , containers ==0.5.*
                     , mtl ==2.2.*
                     , array ==0.5.1.*
                     , transformers ==0.4.2.*

  default-language:    Haskell2010

executable horrent-exec
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , horrent
                     , directory ==1.2.*
                     , bytestring ==0.10.*
                     , mtl ==2.2.*
                     , data-ordlist ==0.4.7.*
                     , transformers ==0.4.2.*


  default-language:    Haskell2010

test-suite horrent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , horrent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
