name:                horrent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Blazej Kolad
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable horrent-exec
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                      , directory
                      , bytestring
                      , mtl
                      , data-ordlist
                      , transformers
                      , array
                      , attoparsec
                      , stm
                      , containers
                      , base16-bytestring
                      , cryptohash
                      , async
                      , network
                      , binary
                      , HTTP
                      , conduit-extra
                      , conduit
                      , streaming-commons
                      , resourcet
                      , free
                      , conduit-merge
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , conduit-combinators
                      , text
                      , lens



  default-language:    Haskell2010



  default-language:    Haskell2010

test-suite horrent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , horrent
                     , mtl
                     , directory
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck





  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
